fix: update sidebar icon styles for light and dark modes

--- a/public/catppuccin.css
+++ b/public/catppuccin.css
@@ -296,7 +296,7 @@
 }
 
 /* Lists icon background color override for light mode */
-#sidebar :is(.orca-fav-item-icon, .orca-tags-tag-icon, .orca-aliased-block-icon) {
+#sidebar :is(.orca-fav-item-icon, .orca-tags-tag-icon, .orca-tags-tag-icon-emoji, .orca-aliased-block-icon, .orca-aliased-block-icon-emoji) {
   background-color: var(--catppuccin-latte-surface0);
   color: var(--catppuccin-latte-overlay2);
 }
@@ -305,7 +305,7 @@
   background-color: var(--catppuccin-latte-surface1);
 }
 
-#sidebar :is(.orca-fav-item-item, .orca-tags-tag-item, .orca-aliased-block-item):hover :is(.orca-fav-item-icon, .orca-tags-tag-icon, .orca-aliased-block-icon) {
+#sidebar :is(.orca-fav-item-item, .orca-tags-tag-item, .orca-aliased-block-item):hover :is(.orca-fav-item-icon, .orca-tags-tag-icon, .orca-tags-tag-icon-emoji, .orca-aliased-block-icon, .orca-aliased-block-icon-emoji) {
   background-color: var(--catppuccin-latte-surface0);
   color: var(--catppuccin-latte-overlay1);
 }
@@ -387,7 +387,7 @@
   }
 
   /* Lists icon background color override for dark mode */
-  #sidebar :is(.orca-fav-item-icon, .orca-tags-tag-icon, .orca-aliased-block-icon) {
+  #sidebar :is(.orca-fav-item-icon, .orca-tags-tag-icon, .orca-tags-tag-icon-emoji, .orca-aliased-block-icon, .orca-aliased-block-icon-emoji) {
     background-color: var(--catppuccin-macchiato-surface0);
     color: var(--catppuccin-macchiato-overlay2);
   }
@@ -396,7 +396,7 @@
     background-color: var(--catppuccin-macchiato-surface1);
   }
 
-  #sidebar :is(.orca-fav-item-item, .orca-tags-tag-item, .orca-aliased-block-item):hover :is(.orca-fav-item-icon, .orca-tags-tag-icon, .orca-aliased-block-icon) {
+  #sidebar :is(.orca-fav-item-item, .orca-tags-tag-item, .orca-aliased-block-item):hover :is(.orca-fav-item-icon, .orca-tags-tag-icon, .orca-tags-tag-icon-emoji, .orca-aliased-block-icon, .orca-aliased-block-icon-emoji) {
     background-color: var(--catppuccin-macchiato-surface0);
     color: var(--catppuccin-macchiato-overlay1);
   }
